- updated: utils.random(max, min)
- updated: completely rewritten utils.async()
- updated: @{head} (added author meta tag (if not empty) from config)

- fixed: FrameworkFileSystem class
- fixed: view render
- fixed: FrameworkCache.fn()
- fixed: FrameworkCache.recycle()
- fixed: utils.reduce()
- fixed: utils.base64ToFile()
- fixed: @{canonical}, @{next}, @{prev}, @{prefetch}, @{prerender}

!!! IMPORTANT !!!

- renamed: websocket event websocket-connection -> websocket-beg
- renamed: controller.lastEventID -> contrlloler.sseID
- renamed: framework.inject() to framework.injectModule()
- renamed: framework.path.backup() -> framework.path.backups()
- renamed: controller.statusCode –> controller.status
- renamed: String.prototype.maxLength() -> String.prototype.max()

improvements
clean code

======= 1.2.6

- added: new options parameter - framework.run(http/https, debug, [port], [ip], [options])
- added: static-accepts - .map, .ogg, .mp3, .webp, .swf

- updated: framework.route() and framework.websocket(), Example: framework.route('/', fn, { flags: [], length: 3430, timeout: 3400 });
- updated: utils.getContentType() - .webp
- updated: nosql

- fixed: views current routing
- fixed: websocket session and user
- fixed: controller.session and controller.user

- renamed: [backup] directory to [backups]

======= 1.2.5

- I believe that this is the final version. From now I'll writing only documentation and some tutorials.
- please visit: https://github.com/petersirka/partial.js-modules

- added: encodeURIcomponent & decodeURIcomponent to WebSocket
- added: ~ to controller.file()
- added: framework.config['allow-compile-js'] {Boolean} (default true)
- added: framework.config['allow-compile-css'] {Boolean} (default true)
- added: request.user (default null)
- added: new view tag: @{user} (default null)
- added: controller.user (default null)
- added: framework.on('request-end', req, res) - close a request / response
- added: utils.isEmpty(obj)
