@@ -39,6 +39,7 @@ IN DEVELOPMENT ======= 1.2.7
 - fixed: utils.reduce()
 - fixed: utils.base64ToFile()
 - fixed: @{canonical}, @{next}, @{prev}, @{prefetch}, @{prerender}
+- fixed: utils.request()
 
 !!! IMPORTANT !!!
 
